// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.parsers.finances.list-financial-event-groups-response should parse a ListFinancialEvents example with service fees 1`] = `
{
  "listFinancialEventsResult": {
    "financialEvents": {
      "adjustmentEventList": [],
      "affordabilityExpenseEventList": [],
      "affordabilityExpenseReversalEventList": [],
      "chargebackEventList": [],
      "couponPaymentEventList": [],
      "debtRecoveryEventList": [],
      "fbaLiquidationEventList": [],
      "guaranteeClaimEventList": [],
      "imagingServicesFeeEventList": [],
      "loanServicingEventList": [],
      "networkComminglingTransactionEventList": [],
      "payWithAmazonEventList": [],
      "performanceBondRefundEventList": [],
      "productAdsPaymentEventList": [],
      "refundEventList": [
        {
          "amazonOrderId": "123-2345656-89327983",
          "directPaymentList": [],
          "marketplaceName": "Amazon.de",
          "orderChargeAdjustmentList": [],
          "orderChargeList": [],
          "orderFeeAdjustmentList": [],
          "orderFeeList": [],
          "postedDate": 2019-11-20T14:34:12.452Z,
          "sellerOrderId": "123-2345656-89327983",
          "shipmentFeeAdjustmentList": [],
          "shipmentFeeList": [],
          "shipmentItemAdjustmentList": [
            {
              "costOfPointsGranted": null,
              "costOfPointsReturned": null,
              "itemChargeAdjustmentList": [
                {
                  "chargeAmount": {
                    "currencyAmount": -2.29,
                    "currencyCode": "EUR",
                  },
                  "chargeType": "Tax",
                },
                {
                  "chargeAmount": {
                    "currencyAmount": -0.13,
                    "currencyCode": "EUR",
                  },
                  "chargeType": "ShippingTax",
                },
                {
                  "chargeAmount": {
                    "currencyAmount": -0.71,
                    "currencyCode": "EUR",
                  },
                  "chargeType": "ShippingCharge",
                },
                {
                  "chargeAmount": {
                    "currencyAmount": -12.06,
                    "currencyCode": "EUR",
                  },
                  "chargeType": "Principal",
                },
              ],
              "itemChargeList": [],
              "itemFeeAdjustmentList": [
                {
                  "feeAmount": {
                    "currencyAmount": 2.15,
                    "currencyCode": "EUR",
                  },
                  "feeType": "Commission",
                },
                {
                  "feeAmount": {
                    "currencyAmount": -0.43,
                    "currencyCode": "EUR",
                  },
                  "feeType": "RefundCommission",
                },
              ],
              "itemFeeList": [],
              "itemTaxWithheldList": [],
              "orderAdjustmentItemId": "3242342352343",
              "orderItemId": null,
              "promotionAdjustmentList": [
                {
                  "promotionAmount": {
                    "currencyAmount": 0.13,
                    "currencyCode": "EUR",
                  },
                  "promotionId": "DE Core Free Shipping 2018/04/24 20-00-00",
                  "promotionType": "PromotionMetaDataDefinitionValue",
                },
                {
                  "promotionAmount": {
                    "currencyAmount": 0.71,
                    "currencyCode": "EUR",
                  },
                  "promotionId": "DE Core Free Shipping 2018/04/24 20-00-00",
                  "promotionType": "PromotionMetaDataDefinitionValue",
                },
              ],
              "promotionList": [],
              "quantityShipped": 1,
              "sellerSKU": "COOL_SKU-EUR-FBA",
            },
          ],
          "shipmentItemList": [],
        },
      ],
      "rentalTransactionEventList": [],
      "retrochargeEventList": [],
      "safeTReimbursementEventList": [],
      "sellerDealPaymentEventList": [],
      "sellerReviewEnrollmentPaymentEventList": [],
      "serviceFeeEventList": [
        {
          "amazonOrderId": "123-2345656-89327983",
          "asin": null,
          "feeDescription": "Cool title",
          "feeList": [],
          "feeReason": null,
          "fnSKU": null,
          "sellerSKU": "COOL_SKU-EUR-FBA",
        },
        {
          "amazonOrderId": "123-2345656-89327983",
          "asin": null,
          "feeDescription": "Cool fee description",
          "feeList": [
            {
              "feeAmount": {
                "currencyAmount": -2.39,
                "currencyCode": "EUR",
              },
              "feeType": "FBACustomerReturnPerUnitFee",
            },
          ],
          "feeReason": null,
          "fnSKU": null,
          "sellerSKU": "COOL_SKU-EUR-FBA",
        },
      ],
      "serviceProviderCreditEventList": [],
      "shipmentEventList": [
        {
          "amazonOrderId": "123-2345656-89327983",
          "directPaymentList": [],
          "marketplaceName": "Amazon.de",
          "orderChargeAdjustmentList": [],
          "orderChargeList": [],
          "orderFeeAdjustmentList": [],
          "orderFeeList": [],
          "postedDate": 2019-11-04T09:50:56.966Z,
          "sellerOrderId": "123-2345656-89327983",
          "shipmentFeeAdjustmentList": [],
          "shipmentFeeList": [],
          "shipmentItemAdjustmentList": [],
          "shipmentItemList": [
            {
              "costOfPointsGranted": null,
              "costOfPointsReturned": null,
              "itemChargeAdjustmentList": [],
              "itemChargeList": [
                {
                  "chargeAmount": {
                    "currencyAmount": 12.06,
                    "currencyCode": "EUR",
                  },
                  "chargeType": "Principal",
                },
                {
                  "chargeAmount": {
                    "currencyAmount": 2.29,
                    "currencyCode": "EUR",
                  },
                  "chargeType": "Tax",
                },
                {
                  "chargeAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "EUR",
                  },
                  "chargeType": "GiftWrap",
                },
                {
                  "chargeAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "EUR",
                  },
                  "chargeType": "GiftWrapTax",
                },
                {
                  "chargeAmount": {
                    "currencyAmount": 0.71,
                    "currencyCode": "EUR",
                  },
                  "chargeType": "ShippingCharge",
                },
                {
                  "chargeAmount": {
                    "currencyAmount": 0.13,
                    "currencyCode": "EUR",
                  },
                  "chargeType": "ShippingTax",
                },
              ],
              "itemFeeAdjustmentList": [],
              "itemFeeList": [
                {
                  "feeAmount": {
                    "currencyAmount": -2.39,
                    "currencyCode": "EUR",
                  },
                  "feeType": "FBAPerUnitFulfillmentFee",
                },
                {
                  "feeAmount": {
                    "currencyAmount": -2.15,
                    "currencyCode": "EUR",
                  },
                  "feeType": "Commission",
                },
                {
                  "feeAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "EUR",
                  },
                  "feeType": "FixedClosingFee",
                },
                {
                  "feeAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "EUR",
                  },
                  "feeType": "GiftwrapChargeback",
                },
                {
                  "feeAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "EUR",
                  },
                  "feeType": "ShippingChargeback",
                },
                {
                  "feeAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "EUR",
                  },
                  "feeType": "VariableClosingFee",
                },
              ],
              "itemTaxWithheldList": [],
              "orderAdjustmentItemId": null,
              "orderItemId": "12345",
              "promotionAdjustmentList": [],
              "promotionList": [
                {
                  "promotionAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "EUR",
                  },
                  "promotionId": "DE Core Free Shipping 2018/04/24 20-00-00",
                  "promotionType": "PromotionMetaDataDefinitionValue",
                },
                {
                  "promotionAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "EUR",
                  },
                  "promotionId": "DE Core Free Shipping 2018/04/24 20-00-00",
                  "promotionType": "PromotionMetaDataDefinitionValue",
                },
                {
                  "promotionAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "EUR",
                  },
                  "promotionId": "DE Core Free Shipping 2018/04/24 20-00-00",
                  "promotionType": "PromotionMetaDataDefinitionValue",
                },
                {
                  "promotionAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "EUR",
                  },
                  "promotionId": "DE Core Free Shipping 2018/04/24 20-00-00",
                  "promotionType": "PromotionMetaDataDefinitionValue",
                },
                {
                  "promotionAmount": {
                    "currencyAmount": -0.71,
                    "currencyCode": "EUR",
                  },
                  "promotionId": "DE Core Free Shipping 2018/04/24 20-00-00",
                  "promotionType": "PromotionMetaDataDefinitionValue",
                },
                {
                  "promotionAmount": {
                    "currencyAmount": -0.13,
                    "currencyCode": "EUR",
                  },
                  "promotionId": "DE Core Free Shipping 2018/04/24 20-00-00",
                  "promotionType": "PromotionMetaDataDefinitionValue",
                },
              ],
              "quantityShipped": 1,
              "sellerSKU": "COOL_SKU-EUR-FBA",
            },
          ],
        },
      ],
      "taxWithholdingEventList": [],
      "tdsReimbursementEventList": [],
    },
    "nextToken": null,
  },
  "responseMetadata": {
    "requestId": "508eabb9-3606-4124-b01d-e879190aaf28",
  },
}
`;

exports[`lib.client.parsers.finances.list-financial-event-groups-response should parse the ListFinancialEvents example response from MWS doc 1`] = `
{
  "listFinancialEventsResult": {
    "financialEvents": {
      "adjustmentEventList": [],
      "affordabilityExpenseEventList": [
        {
          "amazonOrderId": "931-2463294-5740665",
          "baseExpense": {
            "currencyAmount": -100,
            "currencyCode": "INR",
          },
          "marketplaceId": "A2XZLSVIQ0F4JT",
          "postedDate": 2018-02-08T13:17:15.000Z,
          "taxTypeCGST": {
            "currencyAmount": 0,
            "currencyCode": "INR",
          },
          "taxTypeIGST": {
            "currencyAmount": -18,
            "currencyCode": "INR",
          },
          "taxTypeSGST": {
            "currencyAmount": 0,
            "currencyCode": "INR",
          },
          "totalExpense": {
            "currencyAmount": -118,
            "currencyCode": "INR",
          },
          "transactionType": "Charge",
        },
      ],
      "affordabilityExpenseReversalEventList": [
        {
          "amazonOrderId": "931-2463294-5740665",
          "baseExpense": {
            "currencyAmount": 100,
            "currencyCode": "INR",
          },
          "marketplaceId": "A2XZLSVIQ0F4JT",
          "postedDate": 2018-02-08T13:17:15.000Z,
          "taxTypeCGST": {
            "currencyAmount": 0,
            "currencyCode": "INR",
          },
          "taxTypeIGST": {
            "currencyAmount": 18,
            "currencyCode": "INR",
          },
          "taxTypeSGST": {
            "currencyAmount": 0,
            "currencyCode": "INR",
          },
          "totalExpense": {
            "currencyAmount": 118,
            "currencyCode": "INR",
          },
          "transactionType": "Refund",
        },
      ],
      "chargebackEventList": [],
      "couponPaymentEventList": [],
      "debtRecoveryEventList": [],
      "fbaLiquidationEventList": [],
      "guaranteeClaimEventList": [],
      "imagingServicesFeeEventList": [],
      "loanServicingEventList": [],
      "networkComminglingTransactionEventList": [],
      "payWithAmazonEventList": [],
      "performanceBondRefundEventList": [],
      "productAdsPaymentEventList": [
        {
          "baseValue": {
            "currencyAmount": 115.34,
            "currencyCode": "USD",
          },
          "invoiceId": "TR1W0B4YB-6",
          "postedDate": null,
          "taxValue": {
            "currencyAmount": 21.91,
            "currencyCode": "USD",
          },
          "transactionType": "Charge",
          "transactionValue": {
            "currencyAmount": 137.25,
            "currencyCode": "USD",
          },
        },
      ],
      "refundEventList": [],
      "rentalTransactionEventList": [],
      "retrochargeEventList": [],
      "safeTReimbursementEventList": [],
      "sellerDealPaymentEventList": [
        {
          "dealDescription": "test fees",
          "dealId": "fec11097c1f4379426a7de68bf938b684f677de2",
          "eventType": "SellerDealComplete",
          "feeAmount": {
            "currencyAmount": 16.38,
            "currencyCode": "USD",
          },
          "feeType": "RunLightningDealFee",
          "postedDate": 2016-11-21T16:18:15.000Z,
          "taxAmount": {
            "currencyAmount": 3.18,
            "currencyCode": "USD",
          },
          "totalAmount": null,
        },
      ],
      "sellerReviewEnrollmentPaymentEventList": [],
      "serviceFeeEventList": [],
      "serviceProviderCreditEventList": [],
      "shipmentEventList": [
        {
          "amazonOrderId": "105-0457358-1245022",
          "directPaymentList": [],
          "marketplaceName": "Amazon.com",
          "orderChargeAdjustmentList": [],
          "orderChargeList": [],
          "orderFeeAdjustmentList": [],
          "orderFeeList": [],
          "postedDate": 2017-01-23T01:31:25.000Z,
          "sellerOrderId": "105-0457358-1245022",
          "shipmentFeeAdjustmentList": [],
          "shipmentFeeList": [],
          "shipmentItemAdjustmentList": [],
          "shipmentItemList": [
            {
              "costOfPointsGranted": null,
              "costOfPointsReturned": null,
              "itemChargeAdjustmentList": [],
              "itemChargeList": [
                {
                  "chargeAmount": {
                    "currencyAmount": 25.99,
                    "currencyCode": "USD",
                  },
                  "chargeType": "Principal",
                },
                {
                  "chargeAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "USD",
                  },
                  "chargeType": "Tax",
                },
              ],
              "itemFeeAdjustmentList": [],
              "itemFeeList": [
                {
                  "feeAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "USD",
                  },
                  "feeType": "ShippingChargeback",
                },
                {
                  "feeAmount": {
                    "currencyAmount": 0,
                    "currencyCode": "USD",
                  },
                  "feeType": "VariableClosingFee",
                },
              ],
              "itemTaxWithheldList": [],
              "orderAdjustmentItemId": null,
              "orderItemId": "46432915698730",
              "promotionAdjustmentList": [],
              "promotionList": [],
              "quantityShipped": 1,
              "sellerSKU": "HS223A-C00",
            },
          ],
        },
      ],
      "taxWithholdingEventList": [],
      "tdsReimbursementEventList": [
        {
          "postedDate": 2019-08-01T16:18:15.000Z,
          "reimbursedAmount": {
            "currencyAmount": 3.98,
            "currencyCode": "INR",
          },
          "tdsOrderId": "TDS-1235",
        },
      ],
    },
    "nextToken": null,
  },
  "responseMetadata": {
    "requestId": "6a2929e5-5c77-470e-ad71-36f30bfaffcc",
  },
}
`;

exports[`lib.client.parsers.finances.list-financial-event-groups-response should parse the ListFinancialEventsByNextToken example response from MWS doc 1`] = `
{
  "listFinancialEventsResult": {
    "financialEvents": {
      "adjustmentEventList": [
        {
          "adjustmentAmount": null,
          "adjustmentItemList": [
            {
              "asin": null,
              "fnSKU": null,
              "perUnitAmount": {
                "currencyAmount": 3.38,
                "currencyCode": "USD",
              },
              "productDescription": "Shacke Metal Shoe Horn 7.5" inches - Double Sided Stainless
                      Steel (Silver)",
              "quantity": 1,
              "sellerSKU": "KL-BPYA-C1VH",
              "totalAmount": {
                "currencyAmount": 3.38,
                "currencyCode": "USD",
              },
            },
          ],
          "adjustmentType": "REVERSAL_REIMBURSEMENT",
          "postedDate": null,
        },
      ],
      "affordabilityExpenseEventList": [
        {
          "amazonOrderId": "931-2463294-5740665",
          "baseExpense": {
            "currencyAmount": -100,
            "currencyCode": "INR",
          },
          "marketplaceId": "A2XZLSVIQ0F4JT",
          "postedDate": 2018-02-08T13:17:15.000Z,
          "taxTypeCGST": {
            "currencyAmount": 0,
            "currencyCode": "INR",
          },
          "taxTypeIGST": {
            "currencyAmount": -18,
            "currencyCode": "INR",
          },
          "taxTypeSGST": {
            "currencyAmount": 0,
            "currencyCode": "INR",
          },
          "totalExpense": {
            "currencyAmount": -118,
            "currencyCode": "INR",
          },
          "transactionType": "Charge",
        },
      ],
      "affordabilityExpenseReversalEventList": [
        {
          "amazonOrderId": "931-2463294-5740665",
          "baseExpense": {
            "currencyAmount": 100,
            "currencyCode": "INR",
          },
          "marketplaceId": "A2XZLSVIQ0F4JT",
          "postedDate": 2018-02-08T13:17:15.000Z,
          "taxTypeCGST": {
            "currencyAmount": 0,
            "currencyCode": "INR",
          },
          "taxTypeIGST": {
            "currencyAmount": 18,
            "currencyCode": "INR",
          },
          "taxTypeSGST": {
            "currencyAmount": 0,
            "currencyCode": "INR",
          },
          "totalExpense": {
            "currencyAmount": 118,
            "currencyCode": "INR",
          },
          "transactionType": "Refund",
        },
      ],
      "chargebackEventList": [],
      "couponPaymentEventList": [],
      "debtRecoveryEventList": [],
      "fbaLiquidationEventList": [],
      "guaranteeClaimEventList": [],
      "imagingServicesFeeEventList": [],
      "loanServicingEventList": [],
      "networkComminglingTransactionEventList": [],
      "payWithAmazonEventList": [],
      "performanceBondRefundEventList": [],
      "productAdsPaymentEventList": [
        {
          "baseValue": {
            "currencyAmount": 115.34,
            "currencyCode": "USD",
          },
          "invoiceId": "TR1W0B4YB-6",
          "postedDate": null,
          "taxValue": {
            "currencyAmount": 21.91,
            "currencyCode": "USD",
          },
          "transactionType": "Charge",
          "transactionValue": {
            "currencyAmount": 137.25,
            "currencyCode": "USD",
          },
        },
      ],
      "refundEventList": [],
      "rentalTransactionEventList": [],
      "retrochargeEventList": [],
      "safeTReimbursementEventList": [],
      "sellerDealPaymentEventList": [
        {
          "dealDescription": "test fees",
          "dealId": "fec11097c1f4379426a7de68bf938b684f677de2",
          "eventType": "SellerDealComplete",
          "feeAmount": {
            "currencyAmount": 16.38,
            "currencyCode": "USD",
          },
          "feeType": "RunLightningDealFee",
          "postedDate": 2016-11-21T16:18:15.000Z,
          "taxAmount": {
            "currencyAmount": 3.18,
            "currencyCode": "USD",
          },
          "totalAmount": null,
        },
      ],
      "sellerReviewEnrollmentPaymentEventList": [],
      "serviceFeeEventList": [
        {
          "amazonOrderId": null,
          "asin": null,
          "feeDescription": "Shacke Luggage Tags with Full Back Privacy Cover w/ Steel Loops - Set of 2
                  (Green)",
          "feeList": [],
          "feeReason": null,
          "fnSKU": null,
          "sellerSKU": "FH-REED-16DX",
        },
        {
          "amazonOrderId": null,
          "asin": null,
          "feeDescription": "Shacke Luggage Tags with Full Back Privacy Cover w/ Steel Loops - Set of 2
                  (Green)",
          "feeList": [
            {
              "feeAmount": {
                "currencyAmount": -1,
                "currencyCode": "USD",
              },
              "feeType": "FBACustomerReturnPerOrderFee",
            },
            {
              "feeAmount": {
                "currencyAmount": -1.06,
                "currencyCode": "USD",
              },
              "feeType": "FBACustomerReturnPerUnitFee",
            },
            {
              "feeAmount": {
                "currencyAmount": -0.5,
                "currencyCode": "USD",
              },
              "feeType": "FBACustomerReturnWeightBasedFee",
            },
          ],
          "feeReason": null,
          "fnSKU": null,
          "sellerSKU": "FH-REED-16DX",
        },
      ],
      "serviceProviderCreditEventList": [],
      "shipmentEventList": [],
      "taxWithholdingEventList": [],
      "tdsReimbursementEventList": [],
    },
    "nextToken": "e21hcmtldHBsYWNlSWQ6bnVsbCxtYXhSZXN1bHRzUGVyUGFnZTowLHNlYXJjaFF1ZXJ5Q2hlY2tzdW06bnVsbCxxdWVyeVBhZ2luYXRpb25Ub2tlbjoidDB3V25MNXFLWkRIZ2p5ZzB3ZHRWODVnV0htVExVMkM0XzlsMHpRMG9HVXFZOVhTdjFyWUNWUE8teGxWRnF3N0ZyaDIyY3lQX0VTOXYxendQNUVvc0t0V1NKM1YyQkRJdWcyWFpXdm1KVmdPVktBdzNIMXUyVHBiTGoxVmRmY3Z6ZlU1WlpNaEpsQ0RKUnYxRk16am13Y1YyQ1BoOXNWMU1xNUZqamxUMlRCeFBkSjdEa3BkbENISElVZ094aHVTN3ZfZlFCUWYyWWJYZ2l3NHNxZXkwNnQyaVBucm5PdnAzRTdKbW4xcnc1UTlaTGV1Ymk5WUV6UGJ6UnhjRmh2VUFKdlQ5U2U3eERIdHVMUzNJVWFRODBubVhja3JLeWt3dVZKeWZXQm5CY3p0bjZTbVRHenJmZ1VOanFMWFFNT2giLHNlYXJjaFF1ZXJ5Om51bGwsdG9rZW5DcmVhdGlvbkRhdGU6MTQ4NTg2MjY5ODI1NCxzZWxsZXJJZDoiQTM1SlMxREpITjdGViJ9",
  },
  "responseMetadata": {
    "requestId": "c07d1dd2-12f9-415f-a167-8ab5f7726dbf",
  },
}
`;
